--- a/global.css
+++ b/global.css
@@ -195,6 +195,107 @@
     filter: blur(2px);
 }
 
+/* btn blue */
+.btns-blue-double .btns-blue-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-blue-double .btns-blue-1 label {
+    position: relative;
+    width: 40px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-blue-double .btns-blue-1 label input {
+    appearance: none;
+}
+
+.btns-blue-double .btns-blue-1 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #1c9a24;
+    border: 4px solid #222;
+    border-bottom: 1px solid #222;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    box-shadow: inset 0 5px 0px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double .btns-blue-1 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double .btns-blue-1 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+.btns-blue-double .btns-blue-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-blue-double .btns-blue-2 label {
+    position: relative;
+    width: 40px;
+    height: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-blue-double .btns-blue-2 label input {
+    appearance: none;
+}
+
+.btns-blue-double .btns-blue-2 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #1c9a24;
+    border: 4px solid #222;
+    border-top: 1px solid #222;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double .btns-blue-2 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double .btns-blue-2 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
 /* Gear */
 .parent {
     /* position: absolute; */
