--- a/global.css
+++ b/global.css
@@ -1,3 +1,10 @@
+:root {
+    --red-color: #b34b4b;
+    --red-active-color: #ff0000;
+    --blue-color: #1c9a24;
+    --blue-active-color: #1c9a24;
+}
+
 .btns-red {
     display: flex;
     justify-content: center;
@@ -26,7 +33,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #b34b4b;
+    background: var(--red-color);
     border: 4px solid #222;
     border-radius: 2px;
     box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
@@ -35,9 +42,10 @@
 
 .btns-red label input:checked ~ span {
     /* box-shadow: 0 0 10px #ee0909, 0 0 20px #e00d0d, 0 0 20px red inset; */
-    background: #ff0000;
-    box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000,
-        0 0 80px #ff0000;
+    background: var(--red-active-color);
+    box-shadow: 0 0 10px var(--red-active-color), 0 0 20px var(--red-active-color),
+        0 0 40px var(--red-active-color), 0 0 60px var(--red-active-color),
+        0 0 80px var(--red-active-color);
 }
 
 .btns-red label span::before {
@@ -77,7 +85,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #1c9a24;
+    background: var(--blue-color);
     border: 4px solid #222;
     border-radius: 2px;
     box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
@@ -103,7 +111,7 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 50px;
+    max-width: 60px;
     /* gap: 20px; */
     margin: 4px 1px;
 }
@@ -195,7 +203,7 @@
     filter: blur(2px);
 }
 
-/* btn blue */
+/* btn blue double horizontal */
 .btns-blue-double .btns-blue-1 {
     display: flex;
     justify-content: center;
@@ -224,7 +232,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #1c9a24;
+    background: var(--blue-color);
     border: 4px solid #222;
     border-bottom: 1px solid #222;
     border-top-left-radius: 2px;
@@ -274,7 +282,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #1c9a24;
+    background: var(--blue-color);
     border: 4px solid #222;
     border-top: 1px solid #222;
     border-bottom-left-radius: 2px;
@@ -289,6 +297,222 @@
 }
 
 .btns-blue-double .btns-blue-2 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+/* btn blue double vertical */
+.btns-blue-double_vertical {
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 2px;
+}
+
+.btns-blue-double_vertical .btns-blue-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-blue-double_vertical .btns-blue-1 label {
+    position: relative;
+    width: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-blue-double_vertical .btns-blue-1 label input {
+    appearance: none;
+}
+
+.btns-blue-double_vertical .btns-blue-1 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--blue-color);
+    border: 4px solid #222;
+    border-right: 1px solid #222;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double_vertical .btns-blue-1 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double_vertical .btns-blue-1 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+.btns-blue-double_vertical .btns-blue-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-blue-double_vertical .btns-blue-2 label {
+    position: relative;
+    width: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-blue-double_vertical .btns-blue-2 label input {
+    appearance: none;
+}
+
+.btns-blue-double_vertical .btns-blue-2 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--blue-color);
+    border: 4px solid #222;
+    border-left: 1px solid #222;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double_vertical .btns-blue-2 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-blue-double_vertical .btns-blue-2 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+/* btn red double vertical */
+.btns-red-double_vertical {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2px;
+}
+
+.btns-red-double_vertical .btns-blue-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-red-double_vertical .btns-blue-1 label {
+    position: relative;
+    width: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-red-double_vertical .btns-blue-1 label input {
+    appearance: none;
+}
+
+.btns-red-double_vertical .btns-blue-1 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--red-color);
+    border: 4px solid #222;
+    border-right: 1px solid #222;
+    border-top-left-radius: 2px;
+    border-bottom-left-radius: 2px;
+    box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double_vertical .btns-blue-1 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double_vertical .btns-blue-1 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+.btns-red-double_vertical .btns-blue-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-red-double_vertical .btns-blue-2 label {
+    position: relative;
+    width: 20px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-red-double_vertical .btns-blue-2 label input {
+    appearance: none;
+}
+
+.btns-red-double_vertical .btns-blue-2 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--red-color);
+    border: 4px solid #222;
+    border-left: 1px solid #222;
+    border-top-right-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: inset 0 5px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double_vertical .btns-blue-2 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double_vertical .btns-blue-2 label span::before {
     content: "";
     position: absolute;
     inset: 5px 3px;
