--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@
     width: 30%;
 }
 
+/* nav hearder */
 .navbar .nav-hearder {
     position: relative;
     border: #000 1px solid;
@@ -148,11 +149,12 @@
     font-size: 12px;
 }
 
+/* nav container */
 .navbar .nav-container {
     position: relative;
     display: flex;
     border: #000 1px solid;
-    height: 44%;
+    height: 46%;
 }
 
 .navbar .nav-container .nav-container_left {
@@ -161,31 +163,71 @@
     padding-left: 182px;
 }
 
+.navbar .nav-container .nav-container_left h4 {
+    font-size: 12px;
+}
+
 .navbar .nav-container .nav-container_right {
     height: 100%;
     width: 38%;
-    padding-left: 20px;
+    padding-left: 28px;
 }
 
+.navbar .nav-container .nav-container_right h4 {
+    display: block;
+    width: 10px;
+    margin-left: 14px;
+    font-size: 12px;
+}
+
+/* nav footer */
 .navbar .nav-footer {
     border: #000 1px solid;
-    height: 46%;
+    height: 42%;
     display: flex;
 }
 
 .navbar .nav-footer .nav-footer_left {
     width: 41%;
     padding-left: 40px;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    border: #000 1px solid;
+}
+
+.navbar .nav-footer .nav-footer_left h4 {
+    font-size: 12px;
 }
 
 .navbar .nav-footer .nav-footer_center {
     width: 24%;
     padding-left: 22px;
+    border: #000 1px solid;
+}
+
+.navbar .nav-footer .nav-footer_center h4 {
+    font-size: 12px;
 }
 
 .navbar .nav-footer .nav-footer_right {
     width: 45%;
     padding-left: 38px;
+    border: #000 1px solid;
+}
+
+.navbar .nav-footer .nav-footer_right h4 {
+    display: flex;
+    width: 10px;
+    margin-left: 20px;
+    font-size: 12px;
+}
+
+.navbar .nav-footer .nav-footer_right h5 {
+    margin-left: 8px;
+    font-size: 12px;
+    font-weight: bold;
 }
 
 /* Man hinh */
