--- a/global.css
+++ b/global.css
@@ -10,15 +10,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 50px;
+    max-width: 60px;
     /* gap: 20px; */
     margin: 4px;
 }
 
 .btns-red label {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,15 +62,15 @@
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    max-width: 50px;
+    max-width: 40px;
     /* gap: 20px; */
     margin: 4px;
 }
 
 .btns-blue label {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -118,8 +118,8 @@
 
 .btns-white label {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -167,8 +167,8 @@
 
 .btns-orange label {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 36px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -216,8 +216,8 @@
 
 .btns-blue-double .btns-blue-1 label {
     position: relative;
-    width: 40px;
-    height: 20px;
+    width: 36px;
+    height: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -266,8 +266,8 @@
 
 .btns-blue-double .btns-blue-2 label {
     position: relative;
-    width: 40px;
-    height: 20px;
+    width: 36px;
+    height: 18px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -304,6 +304,107 @@
     filter: blur(2px);
 }
 
+/* btn red double horizontal */
+.btns-red-double .btns-red-1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-red-double .btns-red-1 label {
+    position: relative;
+    width: 36px;
+    height: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-red-double .btns-red-1 label input {
+    appearance: none;
+}
+
+.btns-red-double .btns-red-1 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--red-color);
+    border: 4px solid #222;
+    border-bottom: 1px solid #222;
+    border-top-left-radius: 2px;
+    border-top-right-radius: 2px;
+    box-shadow: inset 0 5px 0px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double .btns-red-1 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double .btns-red-1 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
+.btns-red-double .btns-red-2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* max-width: 50px; */
+    /* gap: 20px; */
+    /* margin: 4px; */
+}
+
+.btns-red-double .btns-red-2 label {
+    position: relative;
+    width: 36px;
+    height: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.btns-red-double .btns-red-2 label input {
+    appearance: none;
+}
+
+.btns-red-double .btns-red-2 label span {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: var(--red-color);
+    border: 4px solid #222;
+    border-top: 1px solid #222;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    box-shadow: inset 0 0px 1px rgba(0, 0, 0, 0.35), 0 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double .btns-red-2 label input:checked ~ span {
+    box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.35), inset 5px 5px rgba(0, 0, 0, 0.5),
+        inset 0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.btns-red-double .btns-red-2 label span::before {
+    content: "";
+    position: absolute;
+    inset: 5px 3px;
+    border-top: 1px solid #ccc;
+    filter: blur(2px);
+}
+
 /* btn blue double vertical */
 .btns-blue-double_vertical {
     display: flex;
@@ -324,8 +425,8 @@
 
 .btns-blue-double_vertical .btns-blue-1 label {
     position: relative;
-    width: 20px;
-    height: 40px;
+    width: 18px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -374,8 +475,8 @@
 
 .btns-blue-double_vertical .btns-blue-2 label {
     position: relative;
-    width: 20px;
-    height: 40px;
+    width: 18px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -432,8 +533,8 @@
 
 .btns-red-double_vertical .btns-blue-1 label {
     position: relative;
-    width: 20px;
-    height: 40px;
+    width: 18px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -482,8 +583,8 @@
 
 .btns-red-double_vertical .btns-blue-2 label {
     position: relative;
-    width: 20px;
-    height: 40px;
+    width: 18px;
+    height: 36px;
     display: flex;
     justify-content: center;
     align-items: center;
