--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -142,7 +142,7 @@
         inset 0 1px 2px rgba(0, 0, 0, 0.35); */
 }
 
-.leds label input:checked ~ span {
+.leds.active span {
     background: #ff0000;
     box-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 40px #ff0000, 0 0 60px #ff0000,
         0 0 80px #ff0000;
