--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -256,11 +256,23 @@
 }
 
 .show-information {
-    display: none;
+    display: block;
     background-color: var(--primary-color);
     margin: auto;
     width: 90%;
     height: 85%;
+}
+
+.hide {
+    display: none;
+    margin: auto;
+    width: 90%;
+    height: 85%;
+    background-color: #000;
+}
+
+.show {
+    background-color: var(--primary-color);
 }
 
 .show-information .channels {
@@ -339,6 +351,7 @@
 }
 
 .bullet {
+    position: relative;
     border: 1px dashed rgb(52, 52, 139);
     display: flex;
     justify-content: center;
@@ -357,10 +370,23 @@
     border-width: 0 16px 20px 16px;
     border-color: transparent transparent green transparent;
     transform: rotate(0deg);
+    /* animation: blink 1s linear infinite; */
 }
 
 .bullet .triangle.blue {
     border-color: transparent transparent blue transparent;
+}
+
+.row-bullet .pencil-notice {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    padding: 0px 2px;
+    font-size: 10px;
+    /* border: 1px solid red; */
+    line-height: 10px;
+    color: #fff;
+    background-color: var(--primary-color);
 }
 
 .bullet .triangle::before {
@@ -386,15 +412,16 @@
     border: 2px dashed blue;
 }
 
-.hide {
-    margin: auto;
-    width: 90%;
-    height: 85%;
-    background-color: #000;
-}
-
-.show {
-    background-color: var(--primary-color);
+@keyframes blink {
+    0% {
+        opacity: 0;
+    }
+    50% {
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 1;
+    }
 }
 
 /* Footer */
