--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -283,7 +283,7 @@
 
 .show-information .channels .grid-channel {
     height: 100%;
-    width: 40%;
+    width: 42%;
 }
 
 .row-channel {
@@ -293,11 +293,70 @@
     margin-right: 0;
 }
 
-.channel {
+.row-channel .channel {
     border: 1px dashed rgb(52, 52, 139);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.row-channel .channel:last-child {
+    width: 21%;
+}
+
+.channel .triangle {
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    position: relative;
+    border-width: 0 16px 20px 16px;
+    border-color: transparent transparent green transparent;
+    transform: rotate(0deg);
+    /* animation: blink 1s linear infinite; */
+}
+
+.channel .triangle-solid {
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    position: relative;
+    border-width: 0 16px 20px 16px;
+    border-color: transparent transparent green transparent;
+    transform: rotate(0deg);
+    /* animation: blink 1s linear infinite; */
+}
+
+.channel .triangle.blue {
+    border-color: transparent transparent blue transparent;
+}
+
+.channel .triangle-solid.blue {
+    border-color: transparent transparent blue transparent;
+}
+
+.row-channel .pencil-notice {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    padding: 0px 2px;
+    font-size: 10px;
+    /* border: 1px solid red; */
+    line-height: 10px;
+    color: #fff;
+    background-color: var(--primary-color);
+}
+
+.channel .triangle::before {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    border-top: solid 14px transparent;
+    border-left: solid 12px transparent;
+    border-bottom: solid 16px var(--primary-color);
+    border-right: solid 12px transparent;
+    top: -11px;
+    left: -12px;
 }
 
 .channel h3 {
@@ -306,7 +365,7 @@
 
 .show-information .channels .grid-signal {
     height: 100%;
-    width: 60%;
+    width: 58%;
 }
 
 .row-signal {
@@ -316,14 +375,19 @@
     margin-right: 0;
 }
 
-.signal {
+.row-signal .signal {
     border: 1px dashed rgb(52, 52, 139);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
-.signal span {
+.row-signal .signal:last-child {
+    width: 15%;
+}
+
+.row-signal .signal span {
     display: block;
     width: 100%;
     height: 100%;
@@ -373,7 +437,22 @@
     /* animation: blink 1s linear infinite; */
 }
 
+.bullet .triangle-solid {
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    position: relative;
+    border-width: 0 16px 20px 16px;
+    border-color: transparent transparent green transparent;
+    transform: rotate(0deg);
+    /* animation: blink 1s linear infinite; */
+}
+
 .bullet .triangle.blue {
+    border-color: transparent transparent blue transparent;
+}
+
+.bullet .triangle-solid.blue {
     border-color: transparent transparent blue transparent;
 }
 
