--- a/assets/css/btn.css
+++ b/assets/css/btn.css
@@ -159,3 +159,126 @@
     box-shadow: inset 2px -2px 10px rgba(255, 255, 255, 0.5);
     transition: all 0.15s;
 }
+
+/* switch */
+.toggle {
+    width: 38px;
+    height: 38px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.switch {
+    font-size: 12px;
+    position: relative;
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+}
+
+.switch .chk {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider-wrapper-box {
+    position: absolute;
+    cursor: pointer;
+    top: 7px;
+    left: 8px;
+    right: 7px;
+    bottom: 7px;
+    background-color: #6d6d6d;
+    transition: 0.4s;
+    border-radius: 50%;
+    box-shadow: inset 0px 5px 1px rgba(0, 0, 0, 0.35), 0px 5px 5px rgba(0, 0, 0, 0.5),
+        0 10px 10px rgba(0, 0, 0, 0.35);
+}
+
+.slider-wrapper {
+    position: absolute;
+    cursor: pointer;
+    top: 8px;
+    left: 8px;
+    right: 8px;
+    bottom: 8px;
+    background-color: #8f8f8f;
+    border: 1px solid #616161;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 11px;
+    left: 11px;
+    right: 11px;
+    bottom: 11px;
+    background-color: #393939;
+    transition: 0.4s;
+    border-radius: 50%;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    left: -2px;
+    top: -10px;
+    background-color: rgb(126, 119, 119);
+    box-shadow: 0 6px 7px rgba(0, 0, 0, 0.3);
+    transition: 0.4s;
+}
+
+.slider:before,
+.slider:after {
+    content: "";
+    display: block;
+}
+
+.slider:after {
+    background: linear-gradient(transparent 50%, rgba(255, 255, 255, 0) 0) 0 50% / 50% 100%,
+        repeating-linear-gradient(
+                90deg,
+                rgb(126, 119, 119) 0,
+                rgb(126, 119, 119),
+                rgb(126, 119, 119) 10%,
+                rgb(126, 119, 119) 10%,
+                rgb(126, 119, 119) 20%
+            )
+            0 20% / 50% 100%,
+        radial-gradient(circle at 50% 50%, rgb(126, 119, 119) 20%, transparent 21%);
+    background-repeat: no-repeat;
+    border: 6px solid transparent;
+    /* border-left: 10px solid rgb(126, 119, 119); */
+    border-right: 0 solid transparent;
+    transition: border-left-color 0.1s 0.3s ease-out, transform 0.3s ease-out;
+    transform: translateX(-22.5%) rotate(78deg);
+    transform-origin: 25% 50%;
+    position: relative;
+    top: -13px;
+    left: 2px;
+    width: 24px;
+    height: 15px;
+    box-sizing: border-box;
+}
+
+.chk:checked + .slider {
+    background-color: #242424;
+}
+
+.chk:focus + .slider {
+    box-shadow: 0 0 1px #ccc;
+}
+
+.chk:checked + .slider:before {
+    transform: translateY(24px);
+}
+
+.chk:checked + .slider:after {
+    transform: rotateZ(99deg) rotateY(182deg) translateY(2px) translateX(-21px);
+}
