--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,14 +29,14 @@
 
 .hearder .hearder-left {
     position: relative;
-    right: -160px;
+    right: -178px;
     bottom: -30px;
     width: 30%;
 }
 
 .hearder .hearder-right {
     position: relative;
-    left: -160px;
+    left: -178px;
     bottom: -30px;
     width: 30%;
 }
@@ -143,7 +143,7 @@
 }
 .btn-scale {
     position: absolute;
-    right: 133px;
+    right: 157px;
 }
 
 .btn-scale h3 {
@@ -256,7 +256,7 @@
 }
 
 .show-information {
-    /* display: none; */
+    display: none;
     background-color: var(--primary-color);
     margin: auto;
     width: 90%;
@@ -264,7 +264,7 @@
 }
 
 .hide {
-    display: none;
+    /* display: none; */
     margin: auto;
     width: 90%;
     height: 85%;
@@ -634,9 +634,51 @@
 }
 
 .bullet.be {
+    position: relative;
     background-color: var(--primary-color);
 }
 
+.bullet.be span {
+    color: #fff;
+}
+
+.bullet.be h3 {
+    font-size: 16px;
+}
+
+.bullet.be span:nth-child(1) {
+    position: absolute;
+    top: -2px;
+    left: 0;
+    font-size: 14px;
+}
+
+.bullet.be span:nth-child(2) {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #fff;
+}
+
+.bullet.be span:nth-child(4) {
+    position: absolute;
+    bottom: 2px;
+    left: 2px;
+    width: 10px;
+    height: 10px;
+    background-color: #fff;
+}
+
+.bullet.be span:nth-child(5) {
+    position: absolute;
+    font-size: 14px;
+    transform: rotate(90deg);
+    bottom: -2px;
+    right: 0;
+}
 .sum-bullet {
     width: 15%;
     height: 100%;
